port existing entities to smf

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,14 @@
 {
 	"$schema": "https://raw.githubusercontent.com/atampy25/simple-mod-framework/main/Mod%20Manager/src/lib/manifest-schema.json",
 	"version": "0.1.0",
-	"id": "YourPreferredAlias.AnIDForTheMod",
-	"name": "Test Mod",
-	"description": "A truly amazing mod",
-	"authors": ["Your Preferred Alias"],
-	"frameworkVersion": "2.25.1"
+	"id": "shadow587.ZHMChaosModCompanion",
+	"name": "ZHM ChaosMod Companion",
+	"description": "The SMF companion mod for the Hitman 3 ChaosMod.",
+	"authors": [
+		"shadow587"
+	],
+	"frameworkVersion": "2.25.1",
+	"contentFolders": [
+		"companion"
+	]
 }
