--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,14 @@ jobs:
                   field: "updateCheck"
                   value: ${{ format('https://github.com/{0}/releases/latest/download/updates.json', github.repository) }}
 
+            - name: Update version_marker.repository.json version
+              if: ${{ steps.newVersion.outputs.new-release-version }}
+              uses: jossef/action-set-json-field@v2
+              with:
+                  file: "manifest.json"
+                  field: "5a02ac25-a1c9-4a97-9e8a-7b07c84462cc.Version"
+                  value: ${{ steps.newVersion.outputs.new-release-version }}
+
             - name: Get mod ID
               if: ${{ steps.newVersion.outputs.new-release-version }}
               id: modID
